# ai_runtime

./: .gitignore  Cargo.toml  README.md
metrics/: 2026-06-21-first-battery-gpu-run.md  2026-06-28-ac-performance-128-token-run.md  2026-06-28-ac-performance-256-token-run.md  2026-06-28-ac-performance-512-token-run.md  2026-06-28-ac-performance-512-token-wide-calibration-run.md  2026-06-28-ac-performance-gpu-run.md  2026-06-28-high-performance-battery-gpu-run.md
src/: cli.rs  gguf.rs  main.rs  model.rs  policy.rs  store.rs
src/backend/: llamacpp.rs  mod.rs  nvidia.rs
src/probe/: linux.rs  mod.rs
